Fixed attribute list dropdown. and canvas overflow.

--- a/refinery/ui/source/styles/provenance-visualization.less
+++ b/refinery/ui/source/styles/provenance-visualization.less
@@ -9,8 +9,8 @@
   overflow: hidden;
 }
 
-#provvis-nav-bar {
-  overflow: hidden;
+#provvis-nav-bar{
+
 }
 
 #prov-ctrl-node-labeling-btn-group {
